--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@nextui-org/input": "^2.1.16",
     "@nextui-org/react": "^2.2.9",
     "@vercel/speed-insights": "^1.0.8",
+    "axios": "^1.6.7",
     "chroma-js": "^2.4.2",
     "framer-motion": "^10.18.0",
     "micromatch": "^4.0.5",
+    "moment": "^2.30.1",
     "next": "^14.1.0",
     "react": "^18",
     "react-datetime": "^3.2.0",
@@ -25,6 +27,7 @@
     "react-player": "^2.14.1",
     "react-responsive-carousel": "^3.2.23",
     "react-slick": "^0.29.0",
+    "react-toastify": "^10.0.4",
     "react-youtube": "^10.1.0",
     "sharp": "^0.33.2",
     "slick-carousel": "^1.8.1",
