--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-icons": "^5.0.1",
     "react-player": "^2.14.1",
     "react-responsive-carousel": "^3.2.23",
+    "react-select": "^5.8.0",
     "react-slick": "^0.29.0",
     "react-toastify": "^10.0.4",
     "react-youtube": "^10.1.0",
