--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "date-fns": "^3.3.1",
     "framer-motion": "^10.18.0",
     "micromatch": "^4.0.5",
+    "moment": "^2.30.1",
     "next": "^14.1.0",
     "react": "^18.2.0",
     "react-datetime": "^3.2.0",
