--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-youtube": "^10.1.0",
     "sharp": "^0.33.2",
     "slick-carousel": "^1.8.1",
+    "styled-components": "^6.1.8",
     "swiper": "^11.0.5",
     "typeface-poppins": "^1.1.13"
   },
