--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@vercel/speed-insights": "^1.0.8",
     "axios": "^1.6.7",
     "chroma-js": "^2.4.2",
+    "date-fns": "^3.3.1",
     "framer-motion": "^10.18.0",
     "micromatch": "^4.0.5",
+    "moment": "^2.30.1",
     "next": "^14.1.0",
     "react": "^18",
     "react-datetime": "^3.2.0",
@@ -25,11 +27,13 @@
     "react-icons": "^5.0.1",
     "react-player": "^2.14.1",
     "react-responsive-carousel": "^3.2.23",
+    "react-router-dom": "^6.22.0",
     "react-slick": "^0.29.0",
     "react-toastify": "^10.0.4",
     "react-youtube": "^10.1.0",
     "sharp": "^0.33.2",
     "slick-carousel": "^1.8.1",
+    "swiper": "^11.0.5",
     "typeface-poppins": "^1.1.13"
   },
   "devDependencies": {
